<resources>
    <string name="app_name">CareFridge</string>
    <string name="menu_home">홈</string>
    <string name="menu_ingredient">재료</string>

    <!-- 재료 추가 다이얼로그 -->
    <string name="dialog_cancel">취소</string>
    <string name="dialog_add">추가</string>
    <string name="dialog_delete">삭제</string>
    <string name="dialog_edit">편집</string>
    <string name="dialog_add_title_tv">재료 추가하기</string>
    <string name="dialog_edit_ingredient_title_tv">재료 편집</string>"
    <string name="dialog_add_ingredient_name_tv">재료명</string>
    <string name="dialog_add_ingredient_name_hint">재료 이름 입력</string>
    <string name="dialog_add_ingredient_amount_tv">양 (단위: g)</string>
    <string name="dialog_add_ingredient_amount_et">%d</string>
    <string name="dialog_add_ingredient_expirationDate_tv">유통기한</string>
    <string name="dialog_add_ingredient_expirationDate_hint">2023-11-29</string>
    <string name="dialog_add_ingredient_prefer_tv">선호 여부</string>

    <!-- 재료 화면 -->
    <string name="item_ingredient_amount_tv">%d g</string>
    <string name="item_ingredient_dDay_tv">D%1$s%2$d\u0020</string>
    <string name="item_ingredient_dDay">D-Day</string>

    <!-- 메뉴 추천 화면 -->
    <string name="dialog_recommend_menu_title">메뉴 추천 완료!</string>
    <string name="dialog_recommend_menu_loading">메뉴 추천중</string>
    <string name="dialog_recommend_menu_again">다시 추천 받기</string>
    <string name="dialog_recommend_menu_try">만들어 먹기</string>

    <!-- 메뉴 이름 -->
    <string-array name="menu_name_arr">
        <item name="spaghetti">스파게티</item>
        <item name="bibimbap">비빔밥</item>
        <item name="jajangmyeon">짜장면</item>
        <item name="steak">스테이크</item>
        <item name="sandwich">샌드위치</item>
    </string-array>
</resources>